force-app/main/default/objects/Grant__c/fields/AmountPending__c.field-meta.xml
<CustomField>
    <fullName>AmountPending__c</fullName>
    <label>Amount Pending</label>
    <summarizedField>GrantUsage__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>GrantUsage__c.QuoteStatus__c</field>
        <operation>notEqual</operation>
        <value>Accepted,Denied</value>
    </summaryFilterItems>
    <summaryForeignKey>GrantUsage__c.GrantId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>