force-app/main/default/objects/Grant__c/fields/AmountRemaining__c.field-meta.xml
<CustomField>
    <fullName>AmountRemaining__c</fullName>
    <formula>Amount__c -  AmountUsed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>