force-app/main/default/objects/Grant__c/fields/AmountUsed__c.field-meta.xml
<CustomField>
    <fullName>AmountUsed__c</fullName>
    <inlineHelpText>Sum of all Quotes where the customer Accepted the Quote and the Grant will be used.</inlineHelpText>
    <label>Amount Used</label>
    <summarizedField>GrantUsage__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>GrantUsage__c.QuoteStatus__c</field>
        <operation>equals</operation>
        <value>Accepted</value>
    </summaryFilterItems>
    <summaryForeignKey>GrantUsage__c.GrantId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>